part_1/1_0_9/ping-pong-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-log-output-apps-ingress
spec:
  rules:
  -  http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-app-svc
            port: 
              number: 2346
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-app-svc
            port:
              number: 2345
